2002-06-03  Cyrille Chepelov  <cyrille@chepelov.org>

	* sheets/network.sheet.in: corrected a typo in plotter invocation.

2002-06-03  Steffen Macke  <sdteffen@web.de>

	* shapes/network/digitizing_board.png:
	* shapes/network/digitizing_board.shape:
	* shapes/network/plotter.png:
	* shapes/network/plotter.shape:
	* shapes/network/Makefile.am
	* sheets/network.sheet.in: added new plotter and digitizing
	board shapes
	
2002-06-02  Cyrille Chepelov  <cyrille@chepelov.org>

	* lib/font.c: made a symptomatic fix to a segfault reported by 
	Jan Keirse <jan.keirse@pandora.be> on a SuSE 7.3 system. This
	won't prevent dia from terminating, but should give more
	user-friendly information about why did it terminate.

	Two patches from <robert.young@dsto.defence.gov.au>:
	
	* app/display.c: fix the size of the canvas area which gets
	redrawn. There was an off-by one error (Closes #83659)

	* app/display.c: make sure we redraw all screen only when we
	really have to (some update_areas were mistakenly ignored) (Closes
	#83496). 

	* NEWS: added a new entry for the future. Put there a reminder to
	update the dependencies.

	* configure.in: put in notes about what will change shortly.
	upped the version to 0.90+cvs (did also in config.h.win32)
	upped the minimum version for intltools (now 0.21)
	
2002-06-01  Cyrille Chepelov  <cyrille@chepelov.org>

	* dia.spec:
	* configure.in:
	* NEWS:
	* config.h.win32:
	bumped up version number to 0.90. Yay!

2002-05-30  Cyrille Chepelov  <cyrille@chepelov.org>

	* doc/pl/Makefile.am:
	* doc/en/Makefile.am: fixed a "make install" problem when db2html
	is not present (Reported by Andrew Ferrier
	<andrew.junk@new-destiny.co.uk>). Fixed another "make distclean"
	problem which prevented me from ever seeing the problem in doc/en...
	
	* Makefile.am: added autogen.sh to the EXTRA_DIST clause.
	
	* lib/font.c: patch from <robert.young@dsto.defence.gov.au>; add a
	way to read the font path from the XFS configuration files in